// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Button matches snapshot — danger 1`] = `
<DocumentFragment>
  <button
    class="btn danger  "
  >
    Supprimer
  </button>
</DocumentFragment>
`;

exports[`Button matches snapshot — primary (default) 1`] = `
<DocumentFragment>
  <button
    class="btn primary  "
  >
    Créer
  </button>
</DocumentFragment>
`;

exports[`Button matches snapshot — secondary 1`] = `
<DocumentFragment>
  <button
    class="btn secondary  "
  >
    Annuler
  </button>
</DocumentFragment>
`;

exports[`Button matches snapshot — small size 1`] = `
<DocumentFragment>
  <button
    class="btn primary sm "
  >
    Petit
  </button>
</DocumentFragment>
`;
